# CoffeeApi

./: README.MD  manage.py  pyproject.toml  render.yaml  requirements.txt
CoffeeApi/: settings.py  urls.py
cofeeapp/: asgi.py  root_res.py  settings.py  urls.py  wsgi.py
dataETL/: apps.py  urls.py  views.py
dataETL/analysis/: cleaning.py  model_lineal.py  model_logistic.py  statistic.py
