[tool.poetry]
name = "coffeeapi"
version = "0.1.0"
description = ""
authors = ["ajmaestre <ajmaestretorres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
